--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     </head>
     <body>
         <input type="text" id="input-el">
-        <button type="button" id="input-btn">SAVE INPUT </button>
+        <button type="button" id="input-btn" class="body-btns">SAVE INPUT </button>
+        <button type="button" id="delete-btn" class="body-btns">DELETE ALL</button>
+        <button class="body-btns">ADD CURRENT</button>
         <ul id="ul-el">
-            
         </ul>
          
         <script src="index.js"></script> 
