--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <input type="text" id="input-el">
         <button type="button" id="input-btn" class="body-btns">SAVE INPUT </button>
         <button type="button" id="delete-btn" class="body-btns">DELETE ALL</button>
-        <button class="body-btns">ADD CURRENT</button>
+        <button type="button" id="tab-btn" class="body-btns">SAVE TAB</button>
         <ul id="ul-el">
         </ul>
          
